--- a/project.css
+++ b/project.css
@@ -308,7 +308,4 @@ section.commerce {
             }
         }
 
-/* Marcie Sangaline
-sangalinem@my.westmoreland.edu
-CPT203 HTML & CSS
-/*
+/* written by Mae Sangaline /*
